--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,8 @@
           <descriptorRefs>
             <descriptorRef>jar-with-dependencies</descriptorRef>
           </descriptorRefs>
+          <finalName>grpc-ipc-server</finalName>
+          <appendAssemblyId>false</appendAssemblyId>
           <!-- MainClass in mainfest make a executable jar -->
           <archive>
             <manifest>
@@ -64,6 +66,11 @@
         <groupId>com.google.cloud.tools</groupId>
         <artifactId>jib-maven-plugin</artifactId>
         <version>1.0.0</version>
+        <configuration>
+          <to>
+            <image>grpc-ipc-server</image>
+          </to>
+        </configuration>
       </plugin>
     </plugins>
   </build>
