--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
   </properties>
 
   <build>
+    <!-- OS Extension required by the Protobuf class-generator -->
+    <!--
     <extensions>
       <extension>
         <groupId>kr.motd.maven</groupId>
@@ -21,6 +23,7 @@
         <version>1.6.0</version>
       </extension>
     </extensions>
+    -->
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -45,6 +48,7 @@
         </executions>
       </plugin>
       <!-- Protobuf class-generator -->
+      <!--
       <plugin>
         <groupId>org.xolstice.maven.plugins</groupId>
         <artifactId>protobuf-maven-plugin</artifactId>
@@ -63,6 +67,7 @@
           </execution>
         </executions>
       </plugin>
+      -->
       <!-- Maven Assembly Plugin -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
