Implement gRPC health-check

--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,11 @@
       <version>${grpcVersion}</version>
     </dependency>
     <dependency>
+      <groupId>io.grpc</groupId>
+      <artifactId>grpc-services</artifactId>
+      <version>${grpcVersion}</version>
+    </dependency>
+    <dependency>
       <groupId>com.google.protobuf</groupId>
       <artifactId>protobuf-java</artifactId>
       <version>3.9.0</version>
